--- a/manifests/templates/main.yaml.erb
+++ b/manifests/templates/main.yaml.erb
@@ -298,6 +298,7 @@ application:
                           - "recipe[cicd_infrastructure::integration_jenkins_<%= mod %>]"<% end %>
                           - "recipe[cicd_infrastructure::integration_jenkins_qubell]"
                           - "recipe[cicd_infrastructure::integration_jenkins_description]"
+                          - "recipe[cicd_infrastructure::integration_jenkins_mail]"
                         version: "11.8.2"
                         jattrs:
                           cicd_infrastructure:
