--- a/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/integration/jenkins/jobs/asf-demo-jobs.groovy.erb
@@ -15,8 +15,8 @@ version_props_generate = """
 
   def pom = new XmlParser().parse('pom.xml')
 
-  p['projectGroupId'] = 'org.asf.demo.webapp'
-  p['projectArtifactId'] = 'asf-webapp-demo'
+  p['projectGroupId'] = 'com.griddynamics.asf.webapp-demo'
+  p['projectArtifactId'] = 'spring-petclinic'
   p['projectVersion'] = pom.version.text() ?: '1.0.0-SNAPSHOT'
 
   p['buildGroupId'] = p['projectGroupId']
@@ -34,7 +34,7 @@ set_version = """def version = build.getEnvironment(null)['buildVersion']
 if (version) build.displayName = version"""
 
 qubell_app_params = """{
-    \"input.artifact_url\": \"\${NEXUS_URL}/service/local/artifact/maven/content?r=builds-all&g=com.griddynamics.asf.webapp-demo&a=spring-petclinic&v=\${buildVersion}&e=war\",
+\"input.artifact_url\": \"\${NEXUS_URL}/service/local/artifact/maven/content?r=builds-all&g=\${projectGroupId}&a=\${projectArtifactId}&v=\${buildVersion}&e=war\",
     \"instanceName\": \"asf-webapp-demo-\${buildVersion}\"
 }"""
 
