[DMG-376] Add Sonar email notifications setup

--- a/manifests/templates/main.yaml.erb
+++ b/manifests/templates/main.yaml.erb
@@ -61,8 +61,10 @@ application:
           qubell_password: "publish-signal(string)"
           jira_username: "publish-signal(string)"
           jira_password: "publish-signal(string)"
-          sonar_username: "publish-signal(string)"
-          sonar_password: "publish-signal(string)"
+          jenkins_sonar_username: "publish-signal(string)"
+          jenkins_sonar_password: "publish-signal(string)"
+          admin_sonar_username: "publish-signal(string)"
+          admin_sonar_password: "publish-signal(string)"
 
   <% if config['components'].include? 'sonar' %>
     sonar:
@@ -240,6 +242,10 @@ application:
               qubell_password: consume-signal(string)
               jira_username: consume-signal(string)
               jira_password: consume-signal(string)
+              jenkins_sonar_username: consume-signal(string)
+              jenkins_sonar_password: consume-signal(string)
+              admin_sonar_username: consume-signal(string)
+              admin_sonar_password: consume-signal(string)
         <% (config['components'] - ['selenium']).each do |mod| %>
             <%= mod -%>:
               <%= mod %>_public_ips: consume-signal(list<string>)<% end -%>
@@ -330,8 +336,8 @@ application:
                               <% if config['components'].include? 'sonar' %>
                               sonar:
                                 host: "{$.environment.sonar.sonar_public_ips[0]}"
-                                username: "{$.environment.properties.sonar_username}"
-                                password: "{$.environment.properties.sonar_password}"
+                                username: "{$.environment.properties.jenkins_sonar_username}"
+                                password: "{$.environment.properties.jenkins_sonar_password}"
                               <% end %>
                       output:
                         jenkins_host_state: chefState
@@ -396,6 +402,22 @@ application:
                                 host: "{$.environment.jira.jira_public_ips[0]}"
                               <% end %>
                 <% end -%>
+                <% if config['components'].include? 'sonar' %>
+                  - sonar_setup:
+                      precedingPhases: [ init_component_vms ]
+                      action: chefsolo
+                      parameters:
+                        roles: [ sonar ]
+                        recipeUrl: "{$.cookbooks_url}"
+                        runList: [ "recipe[cicd_infrastructure::integration_sonar_mail]" ]
+                        version: "11.8.2"
+                        jattrs:
+                          cicd_infrastructure:
+                            sonar:
+                              credentials:
+                                username: "{$.environment.properties.admin_sonar_username}"
+                                password: "{$.environment.properties.admin_sonar_password}"
+                <% end %>
                 <% if config['components'].include? 'ldap' %>
                   <% (config['components'] - ['selenium', 'ldap']).each do |mod| %>
                   - <%= mod %>_ldap:
