[DMG-438] Change example.com in LDAP to asf.griddynamics.com

--- a/cookbooks/cicd_infrastructure/templates/default/openldap/root.ldif.erb
+++ b/cookbooks/cicd_infrastructure/templates/default/openldap/root.ldif.erb
@@ -1,7 +1,7 @@
 dn: <%= @basedn %>
 objectClass: dcObject
 objectClass: organizationalUnit
-dc: example
+dc: asf
 ou: example organization
 
 dn: ou=people,<%= @basedn %>
